--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/h2-1.4.187.jar"/>
+	<classpathentry kind="lib" path="/home/hitman/Downloads/junit-4.11.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
