--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="xml"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/h2-1.4.187.jar"/>
@@ -11,5 +12,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
+	<classpathentry kind="lib" path="/home/administrador/Área de Trabalho/jcl-over-slf4j-1.7.12.jar"/>
+	<classpathentry kind="lib" path="/home/administrador/Área de Trabalho/slf4j-api-1.7.12.jar"/>
+	<classpathentry kind="lib" path="/home/administrador/Área de Trabalho/slf4j-jdk14-1.7.12.jar"/>
+	<classpathentry kind="lib" path="/home/administrador/Área de Trabalho/dbunit-2.4.9.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
